# vera

./: .gitignore  CHANGELOG.md  CLAUDE.md  _analyze_heima_mcap.py  _analyze_heima_profile.py  _analyze_heima_profile2.py  _audit_mcap_proxy.py  _audit_mcap_sensitivity.py  _backfill_engine_version.py  _diag_heima_5m.py  _diag_market_cap.py  _diag_survivorship.py  _diag_universe_size.py  _extract_trades.py  _gen_md.py  _gen_report.py  _gs_select_one.py  _mcap_robustness.py  _plot_final.py  _run_heima_bigpos.py  _run_heima_compare.py  _run_sector_batch.py  _run_sector_batch_v2.py  _run_top5_2022.py  _scan_gs_txt.py  analyze_backtest_quality.py  analyze_gupiao012.py  analyze_v4.py  backtest_2022_2026.py  backtest_full_analysis.py  backtest_gupiao001.py  backtest_ma_cross_2024.py  backtest_multitier_2022_2026.py  backtest_quantqq_2026.py  backtest_quantqq_ab_compare.py  backtest_turtle_100w.py  backtest_turtle_simple.py  backtest_wr_rsi_kdj.py  batch_10_b_manual.py  batch_15_manual.py  (+54 more)
backtest/: __init__.py  _constants.py  _entry_basis.py  benchmark.py  degrade_5m.py  degrade_report.py  engine.py  formula_exit.py  ladder_tp.py  matrix_cache.py  metrics.py  result.py  stop_config.py  stop_manager.py
config/: default.yaml  strategy_QUANTQQ.yaml  strategy_example.yaml  strategy_heima_chuangye.yaml  strategy_top4.yaml  strategy_通信解盘.yaml  strategy_通信解盘_前端参数.yaml  strategy_通用模板.yaml  strategy_黑马选股1.yaml  test_5m.yaml  test_upn_q1.yaml
core/: __init__.py  connector.py  data_cache.py  data_fetcher.py  dividend_type.py  formula_runner.py  kline_cache.py  signal_exporter.py  (+2 more)
(+231 files in other folders)
